--- a/index.html
+++ b/index.html
@@ -148,9 +148,32 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
-  </section>
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2880.983103125076!2d-79.41762928441172!3d43.7732095791174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2d728aaf1b1b%3A0x2d385e263b26261b!2s30%20Canterbury%20Pl%2C%20North%20York%2C%20ON%20M2N%200B9!5e0!3m2!1sen!2sca!4v1636649925307!5m2!1sen!2sca" 
+        width="400" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+        </iframe>
+    </div>
 
-  
+    <div>
+        <h3>Run Buddy</h3>
+        <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+            55 Main Street <br/>
+            Some Town, Ca <br/>
+            12345<br />
+            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+    </div>
+  </section>
   
   <!-- footer -->
   <footer>
